tests/integration/errors/test_struct_duplicate_field.sn
# Error test: struct with duplicate field names

struct Point =>
    x: double
    y: double
    x: int

fn main(): void =>
    print("Should not compile\n")
